--- a/upload sini/karya.html
+++ b/upload sini/karya.html
@@ -55,11 +55,34 @@ body {font-family: "Lato", sans-serif}
       <h3 class="putih"> 𝒯𝒽𝑒 𝒫𝓇𝒾𝓃𝒸𝑒</h3>
       <p class ="putih text">Il Principe (Sang Penguasa) adalah sebuah risalat politik oleh seorang pegawai negeri dan teoretikus politik Firenze Niccolò Machiavelli. Aslinya berjudul De Principatibus (Tentang Kekuasaan), ditulis pada 1513,[1] namun baru diterbitkan pada 1532, lima tahun setelah kematian Machiavelli. Tulisan ini adalah sebuah studi klasik tentang kekuasaan – bagaimana memperolehnya, memperluas, dan menggunakannya dengan hasil yang maksimal. Tulisan ini sebenarnya tidak mewakili karya-karyanya selama masa hidupnya, namun karya inilah yang paling diingat, dan yang menyebabkan lahirnya istilah "Machiavellis" yang digunakan secara luas sebagai istilah pejoratif.</p>
       <br>
-       <p class ="cokelat teks">“it is much safer to be feared than loved because ...love is preserved by the link of obligation which, owing to the baseness of men, is broken at every opportunity for their advantage; but fear preserves you by a dread of punishment which never fails.” </p>
+       <p class ="cokelat teks">“it is much safer to be feared than loved because love is preserved by the link of obligation which, owing to the baseness of men, is broken at every opportunity for their advantage; but fear preserves you by a dread of punishment which never fails.” </p>
 <p class="cokelat teks">― Niccolo Machiavelli, The Prince </p>
+<br>
+<br>
+<br>
       
     </div>
   </div>
+  <div class="w3-row">
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/art-of-war.jpg?raw=true" class="w3-round w3-image w3-opacity w3-hover-opacity-off w3-border" alt="The Art of The War" width="280px" height="350px">
+    </div>
+    <!-- Hide this text on small devices -->
+    <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <h3 class="putih"> The Art of The War</h3>
+      <p class ="putih text">The Art of War (bahasa Italia: Dell'arte della guerra) adalah risalah oleh filsuf politik dan sejarawan Renaissance Italia, Niccolò Machiavelli.
+
+Format The Art of War adalah dialog sokratis. Tujuannya, dideklarasikan oleh Lord Fabrizio Colonna (mungkin persona Machiavelli) sejak awal, "Untuk menghormati dan menghargai kebajikanù, untuk tidak meremehkan kemiskinan, menghargai mode dan perintah disiplin militer, untuk membatasi warga negara untuk saling mencintai, untuk hidup tanpa faksi, tidak terlalu menghargai kepentingan pribadi daripada kepentingan publik. " Untuk tujuan ini, Machiavelli mencatat dalam kata pengantarnya, militer seperti atap palazzo yang melindungi isinya.
+
+Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu adalah satu-satunya karya sejarah atau politik Machiavelli yang dicetak selama masa hidupnya, meskipun ia diangkat sebagai sejarawan resmi Florence pada tahun 1520 dan dipercayakan dengan tugas sipil kecil.</p>
+      <br>
+       <p class ="cokelat teks">“The biggest drug used to counter the enemy's plan is to voluntarily do what he planned to do by force, because by doing it voluntarily, you do it in an orderly manner and for your profit and loss; if you do it by force, it will be your destruction.” </p>
+<p class="cokelat teks">― Niccolo Machiavelli, The Art of The War </p>
+      
+    </div>
+  </div>
+  
+
 
 
 <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/8.jpg?raw=true");}</style>
@@ -77,3 +100,4 @@ body {font-family: "Lato", sans-serif}
 </footer>
 </body>
 </html>
+
