--- a/upload sini/karya.html
+++ b/upload sini/karya.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BIOGRAPHY</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVMENT</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVEMENT</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
     <div class="w3-dropdown-hover w3-hide-small">
@@ -95,10 +95,10 @@ Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu ad
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <h3 class="putih">𝒟𝒾𝓈𝒸𝑜𝓊𝓇𝓈𝑒𝓈 𝑜𝓃 𝐿𝒾𝓋𝓎
 </h3>
-      <p class ="putih text"></p>
+      <p class ="putih text">The Discourses on Livy adalah karya sejarah dan filsafat politik yang ditulis pada awal abad ke-16 oleh penulis Italia dan ahli teori politik Niccolò Machiavelli, yang paling dikenal sebagai penulis The Prince. The Discourses diterbitkan secara anumerta dengan hak istimewa kepausan pada tahun 1531.</p>
       <br>
-       <p class ="cokelat teks">“The biggest drug used to counter the enemy's plan is to voluntarily do what he planned to do by force, because by doing it voluntarily, you do it in an orderly manner and for your profit and loss; if you do it by force, it will be your destruction.” </p>
-<p class="cokelat teks">― Niccolo Machiavelli, The Art of The War </p>
+       <p class ="cokelat teks">“Men are driven by two principal impulses, either by love or by fear.” </p>
+<p class="cokelat teks">― Niccolo Machiavelli, Discourses on Livy </p>
       
     </div>
   </div>
@@ -122,3 +122,4 @@ Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu ad
 </footer>
 </body>
 </html>
+
