--- a/keluarga.html
+++ b/keluarga.html
@@ -56,7 +56,7 @@ body {font-family: "Lato", sans-serif}
     <p class="w3-justify putih">Seorang filsuf dan penulis asal Italia, Niccolo di Bernardo dei Machiavelli lahir di kota Florence, Italia. Meski melakukan berbagai profesi sepanjang hidupnya, Machiavelli lebih dikenal sebagai pendiri ilmu politik modern lewat bukunya yang paling terkenal Il Principe (1513). Machiavelli terlahir bukan dari keluarga berada. Ayahnya, Bernardo meski adalah seorang pakar hukum, di antara keluarganya dialah yang paling miskin. Akibat tak mampu membayar utang, ayah Machiavelli tak diizinkan menduduki jabatan publik apapun. Alhasil Bernardo harus hidup hemat di sebuah rumah kecil di luar kota Florence. Dia mendapatkan uang karena secara diam-diam mendapatkan nafkah dari profesinya. Meski miskin, Bernardo memiliki perpustakaan yang pasti menjadi santapan Machiavelli kecil. Namun, tak diketahui soal pendidikan Machiavelli di masa kecil.</p>
     </div>
      <div class="w3-third putih">
-        <p>Marietta CorsiniIstri Niccolò Machiavelli (istri)</p>
+        <p>Marietta CorsiniIstri Niccolò Machiavelli (istri machiavelli)</p>
         <img src="aha.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third putih">
@@ -64,7 +64,7 @@ body {font-family: "Lato", sans-serif}
         <img src="14.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third putih">
-        <p>Bernardo di Niccolò Machivelli (ayah niccolo)</p>
+        <p>Bernardo di Niccolò Machivelli (ayah machiavelli)</p>
         <img src="16.jpg" class="w3-round" alt="Random Name" style="width:60%">
       </div>
     </div>
