--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
    <h2 class="w3-wide putih">𝐍𝐈𝐂𝐂𝐎𝐋𝐎 𝐌𝐀𝐂𝐇𝐈𝐀𝐕𝐄𝐋𝐋𝐈</h2>
     <h3 <p class="w3-opacity putih"><i>" 𝒯𝒽𝑒 𝒢𝒶𝓁𝒾𝓁𝑒𝑜 𝑜𝒻 𝒫𝑜𝓁𝒾𝓉𝒾𝒸 "</i></p> </h3>
-    <p class="w3-justify putih">Niccolo Machiavelli lahir di Florence, Italia, 3 Mei 1469 dan wafat di Florence, Italia, 21 Juni 1527 (pada umur 58 tahun) adalah diplomat dan politikus Italia yang juga seorang filsuf. Sebagai ahli teori, Machiavelli adalah figur utama dalam realitas teori politik, ia merupakan sosok yang sangat disegani di Eropa pada masa Renaisans.</p> 
-    <p class ="w3-justify putih">Niccolo Machiavelli memandang kekuasaan bukanlah semata-mata untuk kepentingan diri sendiri, akan tetapi itu semua adalah untuk kehormatan dan kesejahteraan negara, itulah prinsip Machiavelli.</p>
+    <p class="w3-justify putih">Niccolò Machiavelli lahir di Florence, Italia, 3 Mei 1469 dan wafat di Florence, Italia, 21 Juni 1527 (pada umur 58 tahun) adalah diplomat dan politikus Italia yang juga seorang filsuf. Sebagai ahli teori, Machiavelli adalah figur utama dalam realitas teori politik, ia merupakan sosok yang sangat disegani di Eropa pada masa Renaisans.</p> 
+    <p class ="w3-justify putih">Niccolò Machiavelli memandang kekuasaan bukanlah semata-mata untuk kepentingan diri sendiri, akan tetapi itu semua adalah untuk kehormatan dan kesejahteraan negara, itulah prinsip Machiavelli.</p>
     <p class="w3-justify putih">Machiavelli merupakan sosok yang senang membuat kalimat-kalimat yang diingat oleh para penikmat politik. Salah satu kalimat favorit miliknya, yaitu :</p>
     <p><center><img src="quotes.png" class="w3-round w3-margin-bottom" style="width:80%" "height:85%"></center></p>S
  
