--- a/keluarga.html
+++ b/keluarga.html
@@ -21,9 +21,9 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BIOGRAPHY</a>
-    <a href="#karya.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVEMENT</a>
-    <a href="#pandangan.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
-    <a href="#kami.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
+    <a href="karya.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVEMENT</a>
+    <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
+    <a href="kami.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
