--- a/karya.html
+++ b/karya.html
@@ -118,7 +118,6 @@ Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu ad
     <div class="w3-col m3">
       <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/velli.jpg?raw=true" style="width="280px" height="350px" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
-
     <div class="w3-col m3">
       <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/velli%202.jpg?raw=true" style="width="280px" height="350px" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
     </div>
@@ -126,7 +125,6 @@ Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu ad
     <div class="w3-col m3">
       <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/velli%203.jpg?raw=true" style="width="280px" height="350px" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
     </div>
-
     <div class="w3-col m3">
       <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/belfagor-larcidiavolo.jpg?raw=true" style="width="280px" height="350px" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
     </div>
@@ -144,9 +142,10 @@ Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu ad
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://dini63.github.io/" target="_blank">DINI</a></p>
-   <p class="w3-medium">Powered by <a href="https://nadyava.github.io/" target="_blank">Nadya Valentina Putri</a></p>
+  <p class="w3-medium">Powered by <a href="https://dini63.github.io/" target="_blank">𝓓𝓲𝓷𝓲</a></p>
+   <p class="w3-medium">Powered by <a href="https://nadyava.github.io/" target="_blank">𝓝𝓪𝓭𝔂𝓪 𝓥𝓪𝓵𝓮𝓷𝓽𝓲𝓷𝓪 𝓟𝓾𝓽𝓻𝓲</a></p>
 
 </footer>
 </body>
 </html>
+
