--- a/keluarga.html
+++ b/keluarga.html
@@ -149,7 +149,7 @@ body {font-family: "Lato", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://mnoviarrama63.github.io/" target="_blank">Muhamad Noviar Ramadhan</a></p>
+  <p class="w3-medium">Powered by <a href="https://mnoviarrama63.github.io/" target="_blank">𝓜𝓾𝓱𝓪𝓶𝓪𝓭 𝓝𝓸𝓿𝓲𝓪𝓻 𝓡𝓪𝓶𝓪𝓭𝓱𝓪𝓷</a></p>
 </footer>
 
 <script>
