--- a/keluarga.html
+++ b/keluarga.html
@@ -114,7 +114,7 @@ body {font-family: "Lato", sans-serif}
     <td>Baccina Machiavelli</td>
   </tr>
   <tr>
-    <td>Saudara perempuan Niccolò Machiavelli</td>
+    <td>Saudara laki-laki Niccolò Machiavelli</td>
     <td>Totto Machiavelli</td>
   </tr>
   <tr>
