--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {font-family: "Lato", sans-serif}
     <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BIOGRAPHY</a>
     <a href="karya.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVEMENT</a>
     <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
+    <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DEATH</a>
     <a href="kami.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
