--- a/paeh.html
+++ b/paeh.html
@@ -15,7 +15,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="0.css">
+  <link rel="stylesheet" href="style.css">
     <!-- bootstrap-->
     <!-- font-->
     <link href="https://fonts.googleapis.com/css?family=Germania+One|Righteous" rel="stylesheet">
@@ -60,13 +60,13 @@
 </div>
 
 </nav>
-
+      
         <div id="item-1" > 
           <div class="container">
             <div class="row">
-            <img src="1.jpg" alt="Newton" class="img1 col-md-3 offset-md-3">
+            <img src="1.jpg" alt="New" class="img1 col-md-3 offset-md-3">
             <div class="apa">
-            <h1 class="text1 text-center">NICCOLO  <span class="nico">  MACHIAVELLI </span> </h1>
+            <h1 class="text1 text-center">NICCOLO   MACHIAVELLI </span> </h1>
             <p class="text2 text-center">"Italian diplomat, politician, historian, philosopher."</p>
             </div>
             </div>
