--- a/pandangan.html
+++ b/pandangan.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BIOGRAPHY</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVMENT</a>
+    <a href="karya.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVMENT</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
     <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DEATH</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
