--- a/karya.html
+++ b/karya.html
@@ -20,7 +20,7 @@ body {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BIOGRAPHY</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVEMENT</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
+    <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
     <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DEATH</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
     <div class="w3-dropdown-hover w3-hide-small">
