--- a/pandangan.html
+++ b/pandangan.html
@@ -46,7 +46,7 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 <h1 class="putih"> Pandangan Niccolo Machiavelli terhadap Politik</h1>
-<center><img src="upload disini/machiavelli.jpg"></center>
+<center><img src="upload sini/machiavelli.jpg"></center>
 <p class="putih">Niccolo machiavelli merupakan diplomat dan politikus italia yang juga seorang filsuf.<br>politik menurut pandangan Niccolo Machiavelli adalah supremasi kekuasaan memamaksa. Hal ini bisa dilihat dari buku yg ditulisnya,<a href="1.html"><i>The prince</i></a>. Ia menuliskan bahwa agama dan moral tidak berhubungan mendasar dengan politik kecuali membantu mendapat dan merebut kekuasaan.ia menyebutkan bahwa dasar dari sistem politik yang baik adalah hukum dan tentara yang baik dan menyimpulkan bahwa ketakutan selalu tepat digunakan, seperti halnya kekerasan yang secara efektif dapat mengontrol legalitas.  <br> 
   menurut pandangan beberapa orang, Niccolo Machiavelli adalah orang yang kejam karena beberapa pandangannya terhadap politik tidak didasari terhadap etika dan agama.
   salah satunya pandangan Machiavelli terhadap seorang raja yang menyebutkan bahwa seorang raja tidak boleh ramah terhadap rakyatnya, ia juga menyatakan bahwa seorang raja bebas melakukan apapun, selama untuk mendapat dan mempertahankan kekuasaannya.<br>
