--- a/pandangan.html
+++ b/pandangan.html
@@ -45,6 +45,7 @@ body {font-family: "Lato", sans-serif}
 
 <br>
 <br>
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">  
 <h1 class="putih"> Pandangan Niccolo Machiavelli terhadap Politik</h1>
 <center><img src="upload sini/machiavelli.jpg"></center>
 <p class="putih">Niccolo machiavelli merupakan diplomat dan politikus italia yang juga seorang filsuf.<br>politik menurut pandangan Niccolo Machiavelli adalah supremasi kekuasaan memamaksa. Hal ini bisa dilihat dari buku yg ditulisnya,<a href="1.html"><i>The prince</i></a>. Ia menuliskan bahwa agama dan moral tidak berhubungan mendasar dengan politik kecuali membantu mendapat dan merebut kekuasaan.ia menyebutkan bahwa dasar dari sistem politik yang baik adalah hukum dan tentara yang baik dan menyimpulkan bahwa ketakutan selalu tepat digunakan, seperti halnya kekerasan yang secara efektif dapat mengontrol legalitas.  <br> 
@@ -54,7 +55,8 @@ body {font-family: "Lato", sans-serif}
 
 
 </p>
-
+  </div>
+  
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
