--- a/pandangan.html
+++ b/pandangan.html
@@ -66,7 +66,7 @@ body {font-family: "Lato", sans-serif}
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
   <p class="w3-medium">Powered by <a href="https://racherjuangdito.github.io/index.html" target="_blank">Racherjuangdito</a></p>
-  <p class="w3-medium">Powered by <a href="https://racherjuangdito.github.io/index.html" target="_blank">Fira Aulia Putri</a></p>
+  <p class="w3-medium">Powered by <a href="..." target="_blank">Fira Aulia Putri</a></p>
 </footer>
 </body>
 </html>
