--- a/keluarga.html
+++ b/keluarga.html
@@ -33,6 +33,7 @@ body {font-family: "Lato", sans-serif}
   <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BIOGRAPHY</a>
   <a href="karya.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ACHIEVMENT</a>
   <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PERSPECTIVE</a>
+  <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">DEATH</a>
   <a href="kami.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
 </div>
 
