--- a/pandangan.html
+++ b/pandangan.html
@@ -23,23 +23,16 @@ body {font-family: "Lato", sans-serif}
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
     <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DEATH</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="1.html" class="w3-bar-item w3-button">The Prince</a>
-        <a href="2.html" class="w3-bar-item w3-button">Discourses On Livy</a>
-        <a href="3.html" class="w3-bar-item w3-button">The Art of the War</a>
-      </div>
-    </div>
   </div>
 </div>
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#keluarga.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BIOGRAPHY</a>
-  <a href="#karya.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ACHIEVMENT</a>
-  <a href="#pandangan.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PERSPECTIVE</a>
-  <a href="#kami.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
+  <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BIOGRAPHY</a>
+  <a href="karya.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ACHIEVMENT</a>
+  <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PERSPECTIVE</a>
+  <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">DEATH</a>
+  <a href="kami.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
 </div>
 <!-- Page content -->
 
