--- a/pandangan.html
+++ b/pandangan.html
@@ -35,7 +35,8 @@ body {font-family: "Lato", sans-serif}
   <a href="kami.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
 </div>
 <!-- Page content -->
-
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+  
 <br>
 <br>
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">  
