--- a/karya.html
+++ b/karya.html
@@ -141,6 +141,31 @@ Ditulis antara tahun 1519 dan 1520 dan diterbitkan pada tahun berikutnya, itu ad
    <p class="w3-medium">Powered by <a href="https://nadyava.github.io/" target="_blank">𝓝𝓪𝓭𝔂𝓪 𝓥𝓪𝓵𝓮𝓷𝓽𝓲𝓷𝓪 𝓟𝓾𝓽𝓻𝓲</a></p>
 
 </footer>
+<script>
+// Automatic Slideshow - change image every 4 seconds
+var myIndex = 0;
+carousel();
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}    
+  x[myIndex-1].style.display = "block";  
+  setTimeout(carousel, 4000);    
+}
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
 </body>
 </html>
 
