--- a/pandangan.html
+++ b/pandangan.html
@@ -20,9 +20,8 @@ body {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="keluarga.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BIOGRAPHY</a>
     <a href="karya.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACHIEVMENT</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
+    <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PERSPECTIVE</a>
     <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DEATH</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT US</a>
   </div>
 </div>
 
@@ -32,7 +31,6 @@ body {font-family: "Lato", sans-serif}
   <a href="karya.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ACHIEVMENT</a>
   <a href="pandangan.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PERSPECTIVE</a>
   <a href="paeh.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">DEATH</a>
-  <a href="kami.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
 </div>
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
