--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 </style>
-<body background="8.jpg">
+<body>
+  <body><style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/8.jpg")}</style>
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -38,13 +39,13 @@ body {font-family: "Lato", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="1.jpg" style="width:100%">
+    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/1.jpg" style="width:100%">
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="17.jpg" style="width:100%">
+    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/17.jpg" style="width:100%">
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="13.jpg" style="width:100%">
+    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/13.jpg" style="width:100%">
   </div>
 
   <!-- The Band Section -->
