--- a/keluarga.html
+++ b/keluarga.html
@@ -13,7 +13,8 @@
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 </style>
-<body background="8.jpg">
+<body>
+  <body><style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/8.jpg")}</style>
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -51,15 +52,15 @@ Keluarga Machiavelli di Florence memang termasuk keluarga ningrat tetapi kehidup
     <div class="w3-container w3-center w3-animate-opacity">
      <div class="w3-third putih">
         <p>Marietta CorsiniIstri Niccolò Machiavelli (istri machiavelli)</p>
-        <img src="aha.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aha.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third putih">
         <p>Niccolo Machiavelli</p>
-        <img src="14.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/14.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third putih">
         <p>Bernardo di Niccolò Machivelli (ayah machiavelli)</p>
-        <img src="16.jpg" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/16.jpg" class="w3-round" alt="Random Name" style="width:60%">
       </div>
     </div>
     </div>
@@ -149,7 +150,6 @@ Keluarga Machiavelli di Florence memang termasuk keluarga ningrat tetapi kehidup
 // Automatic Slideshow - change image every 4 seconds
 var myIndex = 0;
 carousel();
-
 function carousel() {
   var i;
   var x = document.getElementsByClassName("mySlides");
@@ -161,7 +161,6 @@ function carousel() {
   x[myIndex-1].style.display = "block";  
   setTimeout(carousel, 4000);    
 }
-
 // Used to toggle the menu on small screens when clicking on the menu button
 function myFunction() {
   var x = document.getElementById("navDemo");
@@ -171,7 +170,6 @@ function myFunction() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
-
 </script>
 
 </body>
