--- a/paeh.html
+++ b/paeh.html
@@ -56,7 +56,7 @@
         <div id="item-1" > 
           <div class="container">
             <div class="row">
-            <img src="1.jpg" alt="New" class="img1 col-md-3 offset-md-3">
+            <img src="#" alt="New" class="img1 col-md-3 offset-md-3">
             <div class="apa">
             <h1 class="text1 text-center">NICCOLO   MACHIAVELLI </span> </h1>
             <p class="text2 text-center">"Italian diplomat, politician, historian, philosopher."</p>
