--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {font-family: "Lato", sans-serif}
     <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/17.jpg" style="width:100%">
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/13.jpg" style="width:100%">
+    <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/191.png" style="width:100%">
   </div>
 
   <!-- The Band Section -->
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif}
     <p class="w3-justify putih">Niccolò Machiavelli lahir di Florence, Italia, 3 Mei 1469 dan wafat di Florence, Italia, 21 Juni 1527 (pada umur 58 tahun) adalah diplomat dan politikus Italia yang juga seorang filsuf. Sebagai ahli teori, Machiavelli adalah figur utama dalam realitas teori politik, ia merupakan sosok yang sangat disegani di Eropa pada masa Renaisans.</p> 
     <p class ="w3-justify putih">Niccolò Machiavelli memandang kekuasaan bukanlah semata-mata untuk kepentingan diri sendiri, akan tetapi itu semua adalah untuk kehormatan dan kesejahteraan negara, itulah prinsip Machiavelli.</p>
     <p class="w3-justify putih">Machiavelli merupakan sosok yang senang membuat kalimat-kalimat yang diingat oleh para penikmat politik. Salah satu kalimat favorit miliknya, yaitu :</p>
-    <p><center><img src="quotes.png" class="w3-round w3-margin-bottom" style="width:80%" "height:85%"></center></p>
+    <p><center><img src="quotes benar.png" class="w3-round w3-margin-bottom" style="width:80%" "height:85%"></center></p>
  
     </div>
   </div>
