--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ body {font-family: "Lato", sans-serif}
     <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/1.jpg" style="width:100%">
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/17.jpg" style="width:100%">
+    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/192.png" style="width:100%">
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/191.png" style="width:100%">
+    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/191.png" style="width:100%">
   </div>
 
   <!-- The Band Section -->
